--- a/GraphicalEditor/GraphicalEditor.csproj
+++ b/GraphicalEditor/GraphicalEditor.csproj
@@ -9,14 +9,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Images\**" />
     <Compile Remove="UI\**" />
-    <EmbeddedResource Remove="Images\**" />
+    <Compile Remove="View\Images\**" />
     <EmbeddedResource Remove="UI\**" />
-    <None Remove="Images\**" />
+    <EmbeddedResource Remove="View\Images\**" />
     <None Remove="UI\**" />
-    <Page Remove="Images\**" />
+    <None Remove="View\Images\**" />
     <Page Remove="UI\**" />
+    <Page Remove="View\Images\**" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,32 +24,42 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="View\Images\ellipse.png" />
-    <None Remove="View\Images\line.png" />
-    <None Remove="View\Images\plus.png" />
-    <None Remove="View\Images\polygon.png" />
-    <None Remove="View\Images\polyline.png" />
-    <None Remove="View\Images\rectangle.png" />
-    <None Remove="View\Images\redo.png" />
-    <None Remove="View\Images\undo.png" />
+    <None Remove="Resources\Images\ellipse.png" />
+    <None Remove="Resources\Images\line.png" />
+    <None Remove="Resources\Images\polygon.png" />
+    <None Remove="Resources\Images\polyline.png" />
+    <None Remove="Resources\Images\rectangle.png" />
+    <None Remove="Resources\Images\redo.png" />
+    <None Remove="Resources\Images\undo.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="View\Images\ellipse.png" />
+    <Resource Include="Resources\Images\ellipse.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\line.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\plus.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\polygon.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\polyline.png" />
+    <Resource Include="Resources\Images\rectangle.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\redo.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Resources\Images\undo.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Extended.Wpf.Toolkit" Version="4.7.25104.5739" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Resource Include="View\Images\line.png" />
-    <Resource Include="View\Images\plus.png" />
-    <Resource Include="View\Images\polygon.png" />
-    <Resource Include="View\Images\polyline.png" />
-    <Resource Include="View\Images\rectangle.png" />
-    <Resource Include="View\Images\redo.png" />
-    <Resource Include="View\Images\undo.png" />
   </ItemGroup>
 
 </Project>
